MDEV-33092 Undefined reference to concurrency on Solaris

remove thr_setconcurrency()
followup for 8bbcaab160c

Fix by Rainer Orth